Fix overlapping between header and overlay show button

--- a/src/styles/components/_header.scss
+++ b/src/styles/components/_header.scss
@@ -153,7 +153,7 @@ header {
   height: 53px;
   position: fixed;
   top: 0;
-  z-index: 1;
+  z-index: 3;
 
   @media only screen and (min-width: $break-large) {
     position: unset;
